# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-08-18 Michael Truog   <mjtruog at protonmail dot com>

    * Add fields to the CloudI Service API code_status function
      (runtime_start, runtime_clock, runtime_clock_offset)
    * Update the cloudi_service_api:code_status type specification
    * Add cloudi_timestamp:seconds_to_string/2 and
      cloudi_timestamp:nanoseconds_to_string/2
    * Convert the CloudI Service API dashboard nodes.html to
      utilize JSON responses from cloudi_service_api_requests

2018-08-11 Michael Truog   <mjtruog at protonmail dot com>

    * Remove Erlang string module use in autoconf macros
    * Add field to the CloudI Service API code_status function
      (build_cloudi_cxx_dependencies_versions)

2018-08-05 Michael Truog   <mjtruog at protonmail dot com>

    * Add field to the CloudI Service API code_status function
      (build_cloudi_cxx_compiler_version)
    * Fix rebar2 compilation warning

2018-08-04 Michael Truog   <mjtruog at protonmail dot com>

    * Add fields to the CloudI Service API code_status function
      (build_cloudi_time, build_erlang_erts_c_compiler_version,
       install_erlang_erts_time,
       install_erlang_kernel_time, install_erlang_stdlib_time,
       install_erlang_sasl_time, install_erlang_compiler_time,
       install_cloudi_time)
    * Use the deterministic Erlang compilation option

2018-07-28 Michael Truog   <mjtruog at protonmail dot com>

    * Add static method support to the Java CloudI API
      (including method references to static methods)

2018-07-26 Michael Truog   <mjtruog at protonmail dot com>

    * Add "--verbose 3" to the rebar2 command line
    * Fix the configure script help info default python-version
    * Add configure script dependencies on Erlang/OTP snmp and eunit
    * Prevent rebar2 from creating empty .so files
    * Allow the Python CloudI API and the Python/C CloudI API