@@ -1,47 +1,28 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <meta http-equiv="Content-Type"
-              content="text/html; charset=utf-8"/>
-        <title>CloudI Dashboard</title>
-        <style type="text/css">
-            .right {
-                float:right;
-            }
-        </style>
-    </head>
-    <body>
-        <script type="text/javascript">
-  
-        </script>
-        <div id="logo">
-            <img class="right" src="powered_by_cloudi.png"></img>
-             
-            <h1>CloudI Dashboard</h1>
-        </div>
-        <div>
-            <ul id="menu-top">
-                <li>
-                    <a href="service_summary.html">Service Summary</a>
-                </li>
-                 
-                <li>
-                    <a href="view_log.html">View Log File</a>
-                </li>
-                 
-                <li>
-                    <a href="code_path.html">Code Path</a>
-                </li>
-                 
-                <li>
-                    <a href="log_settings.html">Log Settings</a>
-                </li>
-                 
-                <li>
-                    <a href="nodes.html">Node Settings</a>
-                </li>
-            </ul>
-        </div>
-    </body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>CloudI Dashboard</title>
+    <style type="text/css">
+      .right {
+          float:right;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="logo">
+      <img class="right" src="powered_by_cloudi.png"></img>
+      <h1>CloudI Dashboard</h1>
+    </div>
+    <div>
+      <ul id="menu-top">
+        <li><a href="service_summary.html">Service Summary</a></li>
+        <li><a href="view_log.html">View Log File</a></li>
+        <li><a href="code_path.html">Code Path</a></li>
+        <li><a href="log_settings.html">Log Settings</a></li>
+        <li><a href="nodes.html">Node Settings</a></li>
+      </ul>
+    </div>
+  </body>
 </html>
